# skinnyCal

./: DESCRIPTION  LICENSE  MANIFEST.in  PREMIUM_FORK_CHANGES.md  Project.toml  README.md  _validate_init.py  index.html  package-lock.json  package.json  pyproject.toml  tester.py  usage.py  webpack.config.js
.github/workflows/: publish.yml
R/: fullCalendar.R  internal.R
dash_fullcalendar/: FullCalendar.py  dash_fullcalendar.min.js.map  metadata.json  package-info.json
man/: fullCalendar.Rd
skinnycal/: FullCalendar.py  __init__.py  skinnycal.min.js  skinnycal.min.js.map
src/: DashFullcalendar.jl
src/jl/: fullcalendar.jl
src/lib/components/: FullCalendar.react.js
